# trajectory_optimization_vis

./: .gitmodules  README.md
trajectory_visualization/: CMakeLists.txt  package.xml
trajectory_visualization/config/: mission.yaml  traj_vis.rviz
trajectory_visualization/launch/: trajectory_vis.launch
trajectory_visualization/src/: main.cpp
